project/stage/parse_tests/tests/reject/bad_statements/bad_if/compound_assignment_in_condition.ul
int F() {
    if(  temp[0]=0 ) { }
}
